{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 140,
  "lineage": "04ccb20f-9123-eadd-0f4b-ecef0d4490c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a08ec99814ac841d",
            "domain": "vpc",
            "id": "eipalloc-0617be0dc71f9ff47",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d392549c24b487bd",
            "private_dns": "ip-10-1-0-101.ap-south-1.compute.internal",
            "private_ip": "10.1.0.101",
            "public_dns": "ec2-15-207-36-177.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.36.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:939748313851:instance/i-0863f738cbaa370f6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0863f738cbaa370f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d0b6d42259c3224",
            "private_dns": "ip-10-1-0-140.ap-south-1.compute.internal",
            "private_ip": "10.1.0.140",
            "public_dns": "ec2-3-108-61-250.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.61.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f872fef383a0232",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ddaeac01a5c09d4",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0964dbe7b64e84a4a"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.dev",
            "data.template_file.bastion",
            "aws_key_pair.dev",
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:939748313851:instance/i-03572c4135c6fed02",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03572c4135c6fed02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f943b9d329e9f27",
            "private_dns": "ip-10-1-3-68.ap-south-1.compute.internal",
            "private_ip": "10.1.3.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fc5acbfaa2c8fde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f431af85a26da7d4",
            "tags": {
              "Name": "dev-api"
            },
            "tags_all": {
              "Name": "dev-api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bba720cd19ad863"
            ]
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.dev",
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_security_group.devapi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:939748313851:instance/i-0e0efa001f30b5869",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0efa001f30b5869",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d3b6791f597b4a7",
            "private_dns": "ip-10-1-3-195.ap-south-1.compute.internal",
            "private_ip": "10.1.3.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e197e219347eb6a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f431af85a26da7d4",
            "tags": {
              "Name": "dev-app"
            },
            "tags_all": {
              "Name": "dev-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7e9220ee4ba3d86"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.bastion",
            "aws_security_group.devapp",
            "aws_subnet.private",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:939748313851:instance/i-06fab7d89635dd249",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fab7d89635dd249",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dacc42a4be46e8f9",
            "private_dns": "ip-10-1-3-131.ap-south-1.compute.internal",
            "private_ip": "10.1.3.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b628bf2abe514fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f431af85a26da7d4",
            "tags": {
              "Name": "dev-jenkins"
            },
            "tags_all": {
              "Name": "dev-jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0326e1d271a44c8f0"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_subnet.private",
            "aws_vpc.dev",
            "data.template_file.jenkins",
            "aws_key_pair.dev",
            "aws_security_group.alb",
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:internet-gateway/igw-0e8bcbfb848b8629a",
            "id": "igw-0e8bcbfb848b8629a",
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapi-alb/a053ca9e0aff2379",
            "arn_suffix": "app/devapi-alb/a053ca9e0aff2379",
            "dns_name": "internal-devapi-alb-2004873798.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapi-alb/a053ca9e0aff2379",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devapi-alb",
            "security_groups": [
              "sg-017f8cd28e81f6b6d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ddaeac01a5c09d4"
              },
              {
                "subnet_id": "subnet-098486e54192a6a1e"
              },
              {
                "subnet_id": "subnet-0b84b67d334486b64"
              }
            ],
            "subnets": [
              "subnet-06ddaeac01a5c09d4",
              "subnet-098486e54192a6a1e",
              "subnet-0b84b67d334486b64"
            ],
            "tags": {
              "Environment": "api-alb"
            },
            "tags_all": {
              "Environment": "api-alb"
            },
            "vpc_id": "vpc-066ad0a4087499d9d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapp-alb/f557851f8519582a",
            "arn_suffix": "app/devapp-alb/f557851f8519582a",
            "dns_name": "devapp-alb-1403064545.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapp-alb/f557851f8519582a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devapp-alb",
            "security_groups": [
              "sg-017f8cd28e81f6b6d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ddaeac01a5c09d4"
              },
              {
                "subnet_id": "subnet-098486e54192a6a1e"
              },
              {
                "subnet_id": "subnet-0b84b67d334486b64"
              }
            ],
            "subnets": [
              "subnet-06ddaeac01a5c09d4",
              "subnet-098486e54192a6a1e",
              "subnet-0b84b67d334486b64"
            ],
            "tags": {
              "Environment": "app-alb"
            },
            "tags_all": {
              "Environment": "app-alb"
            },
            "vpc_id": "vpc-066ad0a4087499d9d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/jenkins-lb-tf/e5cfeacf40d5f713",
            "arn_suffix": "app/jenkins-lb-tf/e5cfeacf40d5f713",
            "dns_name": "jenkins-lb-tf-479442606.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/jenkins-lb-tf/e5cfeacf40d5f713",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb-tf",
            "security_groups": [
              "sg-0326e1d271a44c8f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ddaeac01a5c09d4"
              },
              {
                "subnet_id": "subnet-098486e54192a6a1e"
              },
              {
                "subnet_id": "subnet-0b84b67d334486b64"
              }
            ],
            "subnets": [
              "subnet-06ddaeac01a5c09d4",
              "subnet-098486e54192a6a1e",
              "subnet-0b84b67d334486b64"
            ],
            "tags": {
              "Environment": "jenkins"
            },
            "tags_all": {
              "Environment": "jenkins"
            },
            "vpc_id": "vpc-066ad0a4087499d9d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/devapi-alb/a053ca9e0aff2379/192cb42e065e8b68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapilb-tg/d1760000854df537",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/devapi-alb/a053ca9e0aff2379/192cb42e065e8b68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapi-alb/a053ca9e0aff2379",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_lb.devapi",
            "aws_lb_target_group.devapi",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/devapp-alb/f557851f8519582a/de21fa57e705d29f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapplb-tg/f5dd168c91bdcbb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/devapp-alb/f557851f8519582a/de21fa57e705d29f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/devapp-alb/f557851f8519582a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.devapp",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_lb.devapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "r_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/jenkins-lb-tf/e5cfeacf40d5f713/4edbf23a437fb8bb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/jenkins/de4005eee0b12cbf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:listener/app/jenkins-lb-tf/e5cfeacf40d5f713/4edbf23a437fb8bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:loadbalancer/app/jenkins-lb-tf/e5cfeacf40d5f713",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_lb.jenkins",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_security_group.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapilb-tg/d1760000854df537",
            "arn_suffix": "targetgroup/devapilb-tg/d1760000854df537",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapilb-tg/d1760000854df537",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devapilb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapplb-tg/f5dd168c91bdcbb1",
            "arn_suffix": "targetgroup/devapplb-tg/f5dd168c91bdcbb1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapplb-tg/f5dd168c91bdcbb1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devapplb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/jenkins/de4005eee0b12cbf",
            "arn_suffix": "targetgroup/jenkins/de4005eee0b12cbf",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/jenkins/de4005eee0b12cbf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/jenkins/de4005eee0b12cbf-20210817052342830800000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/jenkins/de4005eee0b12cbf",
            "target_id": "i-06fab7d89635dd249"
          },
          "dependencies": [
            "aws_instance.jenkins",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_subnet.private",
            "aws_vpc.dev",
            "aws_key_pair.dev",
            "aws_security_group.jenkins",
            "data.template_file.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapilb-tg/d1760000854df537-20210817052331306400000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapilb-tg/d1760000854df537",
            "target_id": "i-03572c4135c6fed02"
          },
          "dependencies": [
            "aws_lb_target_group.devapi",
            "aws_security_group.bastion",
            "aws_security_group.devapi",
            "aws_subnet.private",
            "aws_vpc.dev",
            "aws_instance.devapi",
            "aws_key_pair.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapplb-tg/f5dd168c91bdcbb1-20210817052331300700000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:939748313851:targetgroup/devapplb-tg/f5dd168c91bdcbb1",
            "target_id": "i-0e0efa001f30b5869"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.devapp",
            "aws_subnet.private",
            "aws_vpc.dev",
            "aws_instance.devapp",
            "aws_key_pair.dev",
            "aws_lb_target_group.devapp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0617be0dc71f9ff47",
            "connectivity_type": "public",
            "id": "nat-06f94b4e1d1b35a11",
            "network_interface_id": "eni-0d392549c24b487bd",
            "private_ip": "10.1.0.101",
            "public_ip": "15.207.36.177",
            "subnet_id": "subnet-06ddaeac01a5c09d4",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:route-table/rtb-051c136d6e8322584",
            "id": "rtb-051c136d6e8322584",
            "owner_id": "939748313851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06f94b4e1d1b35a11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-data"
            },
            "tags_all": {
              "Name": "dev-route-data"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev",
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:route-table/rtb-08e2f8236307152a2",
            "id": "rtb-08e2f8236307152a2",
            "owner_id": "939748313851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06f94b4e1d1b35a11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:route-table/rtb-08d24c36709400aec",
            "id": "rtb-08d24c36709400aec",
            "owner_id": "939748313851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8bcbfb848b8629a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route"
            },
            "tags_all": {
              "Name": "dev-public-route"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dataassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d632ca4fef13b4",
            "route_table_id": "rtb-051c136d6e8322584",
            "subnet_id": "subnet-0d89fec3e8b5f9430"
          },
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_eip.natgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02497a9203eee86c6",
            "route_table_id": "rtb-051c136d6e8322584",
            "subnet_id": "subnet-0df8c1d85b135dcbe"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0992fe70f87e2c883",
            "route_table_id": "rtb-051c136d6e8322584",
            "subnet_id": "subnet-03d120e9c4cfde696"
          },
          "dependencies": [
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032bf39a674ae4093",
            "route_table_id": "rtb-08e2f8236307152a2",
            "subnet_id": "subnet-0f431af85a26da7d4"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba9b8e11254929ce",
            "route_table_id": "rtb-08e2f8236307152a2",
            "subnet_id": "subnet-03e17bca31e9796dd"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdc9e8336430ea1",
            "route_table_id": "rtb-08e2f8236307152a2",
            "subnet_id": "subnet-0915ea0932a3c7378"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d28078da3de1983",
            "route_table_id": "rtb-08d24c36709400aec",
            "subnet_id": "subnet-06ddaeac01a5c09d4"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.dev",
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0625fe0220d9db92e",
            "route_table_id": "rtb-08d24c36709400aec",
            "subnet_id": "subnet-098486e54192a6a1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d516e6ee972ed7",
            "route_table_id": "rtb-08d24c36709400aec",
            "subnet_id": "subnet-0b84b67d334486b64"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-017f8cd28e81f6b6d",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017f8cd28e81f6b6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-0964dbe7b64e84a4a",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0964dbe7b64e84a4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-03bba720cd19ad863",
            "description": "Allow tomcat inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bba720cd19ad863",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "devapi from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964dbe7b64e84a4a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devapi",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-api-sg"
            },
            "tags_all": {
              "Name": "dev-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-0c7e9220ee4ba3d86",
            "description": "Allow tomcat inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7e9220ee4ba3d86",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "devapp from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964dbe7b64e84a4a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devapp",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-app-sg"
            },
            "tags_all": {
              "Name": "dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-0326e1d271a44c8f0",
            "description": "Allow jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0326e1d271a44c8f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh-jekins from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964dbe7b64e84a4a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ssh-jekins from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017f8cd28e81f6b6d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-jenkins-sg"
            },
            "tags_all": {
              "Name": "dev-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.dev",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:security-group/sg-048073eadc68ca415",
            "description": "Allow rds inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048073eadc68ca415",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0326e1d271a44c8f0"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bba720cd19ad863"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964dbe7b64e84a4a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7e9220ee4ba3d86"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "939748313851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rds-sg"
            },
            "tags_all": {
              "Name": "dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.devapi",
            "aws_security_group.devapp",
            "aws_security_group.jenkins",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-0d89fec3e8b5f9430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0d89fec3e8b5f9430",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-datasubnet-1"
            },
            "tags_all": {
              "Name": "dev-datasubnet-1"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-0df8c1d85b135dcbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0df8c1d85b135dcbe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-datasubnet-2"
            },
            "tags_all": {
              "Name": "dev-datasubnet-2"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-03d120e9c4cfde696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-03d120e9c4cfde696",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-datasubnet-3"
            },
            "tags_all": {
              "Name": "dev-datasubnet-3"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-0f431af85a26da7d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0f431af85a26da7d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-privatesubnet-1"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-1"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-03e17bca31e9796dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-03e17bca31e9796dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-privatesubnet-2"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-2"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-0915ea0932a3c7378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0915ea0932a3c7378",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-privatesubnet-3"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-3"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-06ddaeac01a5c09d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-06ddaeac01a5c09d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-publicsubnet-1"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-1"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-098486e54192a6a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-098486e54192a6a1e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-publicsubnet-2"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-2"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:subnet/subnet-0b84b67d334486b64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0b84b67d334486b64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev-publicsubnet-3"
            },
            "tags_all": {
              "Name": "dev-publicsubnet-3"
            },
            "vpc_id": "vpc-066ad0a4087499d9d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:939748313851:vpc/vpc-066ad0a4087499d9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06339b18942ed2f32",
            "default_route_table_id": "rtb-0cf5753448433a7d9",
            "default_security_group_id": "sg-01025f1e46a2b2b79",
            "dhcp_options_id": "dopt-8a4bfce1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-066ad0a4087499d9d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf5753448433a7d9",
            "owner_id": "939748313851",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}